@@ -6,6 +6,8 @@ New since 1.9.2:
 * cups.PPD.* now convert from the PPD character set encoding
 * cups.Connection.setPrinterPublished is now renamed to
   cups.Connection.setPrinterShared
+* cups.Connection.setPrinterUsersAllowed
+* cups.Connection.setPrinterUsersDenied
 
 New since 1.9.1:
 
