@@ -1,6 +1,11 @@
 2006-03-10  Tim Waugh  <twaugh@redhat.com>
 
 	* cupsconnection.c (Connection_setPrinterShared): Renamed.
+	(Connection_getPrinterAttributes): Find
+	requesting-user-name-allowed and requesting-user-name-denied
+	attributes.
+	(Connection_setPrinterUsersAllowed): Implemented.
+	(Connection_setPrinterUsersDenied): Implemented.
 
 2006-03-09  Tim Waugh  <twaugh@redhat.com>
 
